--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@mojs/core": "^0.288.2",
     "@quasar/extras": "^1.0.0",
     "axios": "^0.18.1",
+    "chart.js": "^2.9.3",
     "core-js": "^3.6.5",
-    "quasar": "^1.0.0"
+    "quasar": "^1.0.0",
+    "vue-chartjs": "^3.5.0"
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0"
